# wsi-mil-al-pgt

./: .gitignore  pyproject.toml  requirements.txt
configs/: stage1_parotid_seed11.yaml  stage1_parotid_seed23.yaml  stage1_parotid_seed7.yaml  stage1_parotid_v2_split23_seed11.yaml  stage1_parotid_v2_split23_seed23.yaml  stage1_parotid_v2_split23_seed7.yaml
scripts/: 03_make_labels_and_patient_splits.py  03a_build_parotid_slides_raw.py  04_extract_tiles.py  05_build_bag_index.py  07_train.py  08_infer_and_export.py  09_export_topk_tiles_and_heatmap.py
wsi_mil/datasets/: bag_dataset.py
wsi_mil/models/: __init__.py  attention_mil.py  tile_encoder.py  wsi_mil_model.py
wsi_mil/train/: trainer.py
wsi_mil/utils/: io.py  log.py  metrics.py  seed.py  vis.py  wsi_reader.py
